# dc1d

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
dc1d/: __init__.py  nn.py  nnet.py  ops.py
nnet/: deform_conv.py
playground/: param_example.py  readme_example.py
