[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dc1d"
version = "0.0.1"
authors = [
  { name="William Ravenscroft", email="jwravenscroft1@sheffield.ac.uk" },
]
description = "A PyTorch implementation of 1D deformable convolution"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]